Add GetServicesByScope
