# GetVisibleServicesByScope/index.ts
@@ -1,0 +1,36 @@
+import { Context } from "@azure/functions";
+import { createBlobService } from "azure-storage";
+
+import * as express from "express";
+
+import { getRequiredStringEnv } from "io-functions-commons/dist/src/utils/env";
+import { secureExpressApp } from "io-functions-commons/dist/src/utils/express";
+import { setAppContext } from "io-functions-commons/dist/src/utils/middlewares/context_middleware";
+
+import createAzureFunctionHandler from "io-functions-express/dist/src/createAzureFunctionsHandler";
+
+import { GetVisibleServicesByScope } from "./handler";
+
+// Setup Express
+const app = express();
+secureExpressApp(app);
+
+const storageConnectionString = getRequiredStringEnv("CachedStorageConnection");
+const blobService = createBlobService(storageConnectionString);
+
+const servicesByScopeBlobId = getRequiredStringEnv("SERVICES_BY_SCOPE_BLOB_ID");
+
+app.get(
+  "/api/v1/services/scope",
+  GetVisibleServicesByScope(blobService, servicesByScopeBlobId)
+);
+
+const azureFunctionHandler = createAzureFunctionHandler(app);
+
+// Binds the express app to an Azure Function handler
+function httpStart(context: Context): void {
+  setAppContext(app, context);
+  azureFunctionHandler(context);
+}
+
+export default httpStart;
